--- a/ресурсы/scorehud.yml
+++ b/ресурсы/scorehud.yml
@@ -6,10 +6,10 @@ scorehud-version: 1
 # Changing titles of the scoreboard.
 # Can be of any number.
 server-names:
-- "§l§aServer §dName"
-- "§l§bServer §cName"
-- "§l§cServer §bName"
-- "§l§dServer §aName"
+- "§1§cLol§2Mine"
+- "§l§dLol§4Mine"
+- "§l§cLol§2Mine"
+- "§l§dLol§4Mine"
 
 # Note: You can find links to the required/supported plugins via the README.md.
 # IMPORTANT NOTE: You can only set a maximum of 15 lines and no more.
@@ -28,10 +28,10 @@ server-names:
 #
 # For a list of addons go here https://github.com/JackMD/ScoreHud/blob/master/README.md#addons.
 score-lines:
-- " §aLine #1"
-- " §bLine #2"
-- " §cLine #3"
-- " §dLine #4"
+- " §aLalalend22828 #1"
+- " §bТы#2"
+- " §cConsol#3"
+- " §dMoney#4"
 
 # If you want to display different scoreboards for every world then set per-world-scoreboard to true in config.yml.
 # After that edit the following to suit your needs.
